# refried

./: .gitignore  PKG-INFO  README.md  __init__.py  budgeting.md  bump.sh  pyproject.toml  setup.py  test_period.py
docs/: budgeting.md  clearing.md  goals.md  tracking.md
extensions/accts_ext/: __init__.py
extensions/accts_ext/templates/: AcctsExt.html
extensions/avail_ext/: __init__.py
extensions/journal_ext/: __init__.py
plugins/: clearing.py  effective_date.py  evensplit.py  rebudget.py  test_clearing.py  test_evensplit.py  test_rebudget.py  test_utils.py  tracking.py
refried/: __init__.py
refried/extensions/accts_ext/: __init__.py
refried/extensions/accts_ext/templates/: AcctsExt.html
refried/extensions/avail_ext/: __init__.py
refried/extensions/avail_ext/templates/: AvailExt.html
refried/extensions/journal_ext/: __init__.py
refried/extensions/journal_ext/templates/: JournalExt.html
refried/plugins/: README.md  clearing.py  close_zero.py  conversions.py  effective_date.py  evensplit.py  pullfrom.py  rebudget.py  tracking.py  wishfarm.py
refried/scripts/: hello.py
tests/: test_clearing.py  test_evensplit.py  test_period.py  test_rebudget.py  test_refried.py
