[project]
name = "beancount-refried"
version = "0.8.0"
description = "A collection of plugins and scripts for beancount and fava for monthly budgeting."
license = {text="GPL-3.0-or-later"}
authors = [{name="scauligi", email="scauligi@gmail.com"}]
readme = "README.md"

[project.urls]
Repository = "https://github.com/scauligi/refried"

[project.scripts]
rf-hello = "refried.scripts.hello:main"
